Fix Jest typings TODO: Implement tests, putting on backburner due to an issue             with Jest in dapp-scaffold

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "downlevelIteration": true,
     "resolveJsonModule": true,
     "noEmit": true,
-    "typeRoots": ["./types"],
+    "typeRoots": ["node_modules/@types", "./types"],
+    "types": ["jest"],
     "jsx": "react",
     "isolatedModules": true
   },
